--- a/package.json
+++ b/package.json
@@ -27,7 +27,15 @@
   },
   "private": true,
   "dependencies": {
-    "@autovance/api-core": "^0.1.7"
+    "@autovance/api-core": "^0.1.7",
+    "bunyan": "^1.5.1",
+    "dotenv": "^2.0.0",
+    "lodash": "^4.3.0",
+    "redis": "^2.4.2",
+    "request": "^2.69.0",
+    "sleep": "^3.0.1",
+    "when": "^3.7.7",
+    "yojs": "^0.1.0"
   },
   "devDependencies": {
     "eslint-config-xo-space": "^0.7.0",
