--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "start": "node dist",
     "test": "gulp",
+    "install": "gulp prepublish",
     "prepublish": "gulp prepublish"
   },
   "repository": {
