--- a/package.json
+++ b/package.json
@@ -40,21 +40,27 @@
     "yojs": "^0.1.0"
   },
   "devDependencies": {
-    "eslint-config-xo-space": "^0.7.0",
+    "babel-core": "^5.5.0",
     "babel-eslint": "^4.1.6",
+    "chai": "^3.5.0",
+    "del": "^2.0.2",
+    "eslint-config-xo-space": "^0.7.0",
     "eslint-plugin-babel": "^3.0.0",
     "gulp": "^3.9.0",
+    "gulp-babel": "^5.1.0",
+    "gulp-coveralls": "^0.1.0",
     "gulp-eslint": "^1.0.0",
     "gulp-exclude-gitignore": "^1.0.0",
     "gulp-istanbul": "^0.10.3",
     "gulp-mocha": "^2.0.0",
-    "gulp-plumber": "^1.0.0",
     "gulp-nsp": "^2.1.0",
-    "gulp-coveralls": "^0.1.0",
-    "gulp-babel": "^5.1.0",
-    "del": "^2.0.2",
-    "babel-core": "^5.5.0",
-    "isparta": "^3.0.3"
+    "gulp-plumber": "^1.0.0",
+    "gulp-tape": "0.0.7",
+    "isparta": "^3.0.3",
+    "sinon": "^1.17.3",
+    "sinon-as-promised": "^4.0.0",
+    "tap-colorize": "^1.2.0",
+    "tape": "^4.4.0"
   },
   "eslintConfig": {
     "extends": "xo-space/esnext",
