--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "lodash": "^4.3.0",
     "redis": "^2.4.2",
     "request": "^2.69.0",
-    "sleep": "^3.0.1",
-    "when": "^3.7.7",
-    "yojs": "^0.1.0"
+    "when": "^3.7.7"
   },
   "devDependencies": {
     "babel-core": "^5.5.0",
